nextcloud/network-policy-nextcloud-allow-ingress-to-php-from-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-ingress-to-php-from-nginx
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
      tier: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nextcloud
              tier: frontend
      ports:
        - protocol: TCP
          port: 9000
